--- a/.gitignore
+++ b/.gitignore
@@ -201,7 +201,4 @@ cython_debug/
 .cursorignore
 .cursorindexingignore
 
-# Marimo
-marimo/_static/
-marimo/_lsp/
-__marimo__/
+Model\llama-2-7b-chat.Q3_K_S.gguf
